# sunhacks_draft2

./: COMPLETE_SYSTEM_GUIDE.md  GRAPHRAG_GUIDE.md  README.md  USAGE_GUIDE.md  VERCEL_DEPLOYMENT.md  check-status.sh  graphrag_interface_handoff.html  index.html  package-lock.json  package.json  requirements.txt  server.js  setup.sh  start-app.sh  start_graphrag.sh  test-graphrag.sh  vercel.json
langchain-agents/: API_DETAILS.md  README.md  SETUP_GUIDE.md  check_status.py  debug_graph.html  demo_system.py  graphrag_test.html  pyproject.toml  quick_test.py  run.py  server.py  setup_backend.sh  setup_gcloud.sh  setup_google_project.py  test_enhanced.py  test_gemini.py  test_graph.html  test_integration.py  test_new_key.py
langchain-agents/App/: __init__.py  agents_new.py  enhanced_tools.py  gemini_agent.py  main.py  paper_database.py  tools.py
